增加 http 配置的选项，方便集成服务

--- a/.editorconfig
+++ b/.editorconfig
@@ -8,8 +8,8 @@ end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[*.go]
-indent_style = tab
+[*.{go,yml,yaml}]
+indent_style = space
 indent_size = 2
 
 [Dockerfile]
@@ -19,10 +19,6 @@ indent_size = 4
 [Makefile]
 indent_style = tab
 indent_size = 4
-
-[.travis.yml]
-indent_style = space
-indent_size = 2
 
 [*.json]
 indent_style = space
