feat: 更新 Drone 以及 Docker 的部署配置

--- a/.drone.yml
+++ b/.drone.yml
@@ -3,7 +3,7 @@
 # Author: Ming Cheng<mingcheng@outlook.com>
 #
 # Created Date: Thursday, September 17th 2020, 7:16:54 pm
-# Last Modified: Wednesday, January 6th 2021, 8:44:53 pm
+# Last Modified: Tuesday, April 27th 2021, 7:03:06 pm
 #
 # http://www.opensource.org/licenses/MIT
 ###
@@ -20,7 +20,7 @@ steps:
     commands:
       - make build
 
-  - name: publish-docker-image
+  - name: publish-subscriber-image
     image: plugins/docker
     environment:
       GITEA_TOKEN:
@@ -42,3 +42,26 @@ steps:
       tags:
         - latest
         - 2.0.0
+
+  - name: publish-sslocal-image
+    image: plugins/docker
+    environment:
+      GITEA_TOKEN:
+        from_secret: gitea_token
+      GOPROXY: "https://goproxy.cn,direct"
+    when:
+      branch: master
+      event: push
+    settings:
+      registry: swr.cn-east-2.myhuaweicloud.com
+      repo: swr.cn-east-2.myhuaweicloud.com/mingcheng/ssr-sslocal-single
+      username:
+        from_secret: docker_username
+      password:
+        from_secret: docker_password
+      build_args_from_env:
+        - GITEA_TOKEN
+      dockerfile: Dockerfile.sslocal
+      tags:
+        - latest
+        - 1.0.0
