update: 更新 Makefile 构建文件

--- a/.drone.yml
+++ b/.drone.yml
@@ -20,7 +20,7 @@ steps:
     commands:
       - make build
 
-  - name: publish-subscriber-image
+  - name: publish-image
     image: plugins/docker
     environment:
       GITEA_TOKEN:
@@ -41,27 +41,4 @@ steps:
       dockerfile: Dockerfile
       tags:
         - latest
-        - 2.0.0
-
-  - name: publish-sslocal-image
-    image: plugins/docker
-    environment:
-      GITEA_TOKEN:
-        from_secret: gitea_token
-      GOPROXY: "https://goproxy.cn,direct"
-    when:
-      branch: master
-      event: push
-    settings:
-      registry: swr.cn-east-2.myhuaweicloud.com
-      repo: swr.cn-east-2.myhuaweicloud.com/mingcheng/ssr-sslocal-single
-      username:
-        from_secret: docker_username
-      password:
-        from_secret: docker_password
-      build_args_from_env:
-        - GITEA_TOKEN
-      dockerfile: Dockerfile.sslocal
-      tags:
-        - latest
-        - 1.0.0
+        - 3.0.0
