--- a/.drone.yml
+++ b/.drone.yml
@@ -16,16 +16,16 @@ steps:
   - name: build
     image: golang:1.16
     environment:
-      GOPROXY: "https://goproxy.cn,direct"
+      GOPROXY: https://goproxy.cn,direct
     commands:
-      - make build
+      - make test
 
   - name: publish-image
     image: plugins/docker
     environment:
       GITEA_TOKEN:
         from_secret: gitea_token
-      GOPROXY: "https://goproxy.cn,direct"
+      GOPROXY: https://goproxy.cn,direct
     when:
       branch: master
       event: push
